# ffmpeg-cpp

./: CMakeLists.txt  FormatContext.cpp  FormatContext.h  README.md  main.cpp
cmake/modules/: FindFFMPEG.cmake
src/: CFFmpeg.h  FFmpeg.h
src/AVCodec/: Codec.cpp  Codec.h  CodecContext.cpp  CodecContext.h  Packet.cpp  Packet.h
src/AVFormat/: Context.cpp  Context.h  Stream.cpp  Stream.h
src/AVUtil/: Frame.cpp  Frame.h
src/SWScale/: Context.cpp  Context.h
